<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.weather.search.SearchFragment">

    <com.mahdavi.weatherapp.widget.searchbar.Searchbar
        android:id="@+id/search_text_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:sb_enabled="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:paddingHorizontal="@dimen/padding_20"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/no_search_results_found_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="no item found"
        android:textAlignment="center"
        android:visibility="invisible" />
</LinearLayout>