<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/weather"
        android:icon="@drawable/ic_weather"
        android:title="Search" />
    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news"
        android:title="News" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="Setting" />
</menu>